--- a/index.html
+++ b/index.html
@@ -3,24 +3,67 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="A basic HTML website structure.">
-    <title>VIRUS</title>
-    <!-- Link to external CSS or other resources -->
+    <meta name="description" content="A simple wedding website">
+    <meta name="author" content="Your Name">
+    <title>Wedding Website</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <!-- Main content of the website -->
+    <!-- Header Section -->
     <header>
+        <h1>Welcome to Our Wedding Website</h1>
+        <nav>
+            <ul>
+                <li><a href="#about">About Us</a></li>
+                <li><a href="#schedule">Schedule</a></li>
+                <li><a href="#rsvp">RSVP</a></li>
+                <li><a href="#gallery">Gallery</a></li>
+            </ul>
+        </nav>
     </header>
 
+    <!-- Main Content Section -->
     <main>
-        <section id="section1">
-            <h2>Hai un virus</h2>
-            <p>VIRUS VIRUS</p>
+        <!-- About Us Section -->
+        <section id="about">
+            <h2>About Us</h2>
+            <p>Share your love story or any details about the wedding couple.</p>
+        </section>
+
+        <!-- Schedule Section -->
+        <section id="schedule">
+            <h2>Wedding Schedule</h2>
+            <p>Provide details about the date, time, and location of the wedding events.</p>
+        </section>
+
+        <!-- RSVP Section -->
+        <section id="rsvp">
+            <h2>RSVP</h2>
+            <form action="submit_rsvp.php" method="POST">
+                <label for="name">Name:</label>
+                <input type="text" id="name" name="name" required>
+                <label for="email">Email:</label>
+                <input type="email" id="email" name="email" required>
+                <label for="attendance">Will you attend?</label>
+                <select id="attendance" name="attendance">
+                    <option value="yes">Yes</option>
+                    <option value="no">No</option>
+                </select>
+                <button type="submit">Submit</button>
+            </form>
+        </section>
+
+        <!-- Gallery Section -->
+        <section id="gallery">
+            <h2>Gallery</h2>
+            <p>Add photos or links to a gallery here.</p>
         </section>
     </main>
 
-    <!-- Optional: JavaScript files -->
-    <script src="script.js"></script>
+    <!-- Footer Section -->
+    <footer>
+        <p>&copy; 2024 Your Names. All Rights Reserved.</p>
+        <p><a href="#top">Back to Top</a></p>
+    </footer>
 </body>
 </html>
