--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
     <meta name="author" content="alelomuz">
     <title>Joachim & Silvia</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Corinthia:wght@400;700&family=Ephesis&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Corinthia:wght@400;700&family=Ephesis&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
+
 <body>
     <header>
         <nav>
@@ -16,6 +21,7 @@
                 <li><a href="sites/plan.html" id="site3"></a></li>
                 <li><a href="sites/travel-informations.html" id="site4"></a></li>
                 <li><a href="sites/contacts.html" id="site5"></a></li>
+                <li><a
                 <li>
                     <select id="language-select">
                         <option value="en">English</option>
@@ -25,11 +31,10 @@
                 </li>
             </ul>
         </nav>
-        
-        <h1 id="title" class="titlestyle"></h1>
     </header>
 
     <main>
+        <h1 id="title" class="titlestyle"></h1>
         <section id="about">
             <h2>About Us</h2>
             <p>Share your love story or any details about the wedding couple.</p>
