--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
 
     <main>
         <h1 id="title" class="titlestyle"></h1>
+        <h1 class="textstyle">15.09.2025</h1>
         <section id="about">
             <h2>About Us</h2>
             <p>Share your love story or any details about the wedding couple.</p>
         </section>
 
-        <!-- Schedule Section -->
         <section id="schedule">
             <h2>Wedding Schedule</h2>
             <p>Provide details about the date, time, and location of the wedding events.</p>
@@ -61,14 +61,12 @@
             </form>
         </section>
 
-        <!-- Gallery Section -->
         <section id="gallery">
             <h2>Gallery</h2>
             <p>Add photos or links to a gallery here.</p>
         </section>
     </main>
 
-    <!-- Footer Section -->
     <footer>
         <p>&copy; 2024 Your Names. All Rights Reserved.</p>
         <p><a href="#top">Back to Top</a></p>
