--- a/index.html
+++ b/index.html
@@ -21,10 +21,11 @@
                 <li><a href="sites/plan.html" id="site3"></a></li>
                 <li><a href="sites/travel-informations.html" id="site4"></a></li>
                 <li><a href="sites/contacts.html" id="site5"></a></li>
+                <li>
                     <select id="language-select">
-                        <option value="en">English</option>
-                        <option value="de">Deutsch</option>
                         <option value="it">Italiano</option>
+                        <option value="de">Deutsch</option>
+                        <option value="en">English</option>
                     </select>
                 </li>
             </ul>
@@ -32,10 +33,13 @@
     </header>
 
     <main>
-        <h1 id="title" class="titlestyle"></h1>
-        <h1 class="textstyle">15.09.2025</h1>
+        <div id = "titlesection">
+            <h1 id="title0" class="titlestyle"></h1>
+            <h1 class="textstyle">15.09.2025</h1>
+        </div>
+
         <section id="about">
-            <h2>About Us</h2>
+            <h2 id="title1" class="titlestyle"></h2>
             <p>Share your love story or any details about the wedding couple.</p>
         </section>
 
