--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
         <section id="about">
             <h2 id="title1" class="titlestyle"></h2>
-            <p>Share your love story or any details about the wedding couple.</p>
+            <p id="description1"></p>
         </section>
 
         <section id="schedule">
