--- a/index.html
+++ b/index.html
@@ -38,14 +38,19 @@
             <h1 class="textstyle">15.09.2025</h1>
         </div>
 
-        <section id="about">
+        <section>
             <h2 id="title1" class="titlestyle"></h2>
-            <p id="description1"></p>
+            <p id="description1" class="textstyle"></p>
+            <div class="section-images">
+                <img src="img/img1.jpg" alt="Image 1">
+                <img src="img/img2.jpg" alt="Image 2">
+                <img src="img/img3.jpg" alt="Image 3">
+            </div>
         </section>
 
-        <section id="schedule">
-            <h2>Wedding Schedule</h2>
-            <p>Provide details about the date, time, and location of the wedding events.</p>
+        <section>
+            <h2 id="title2" class="titlestyle"></h2>
+            <p id="description2" class="textstyle"></p>
         </section>
 
         <!-- RSVP Section -->
