--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
             <h2 id="title1" class="titlestyle"></h2>
             <p id="description1" class="textstyle"></p>
             <div class="section-images">
-                <img src="img/img1.jpg" alt="Image 1">
-                <img src="img/img2.jpg" alt="Image 2">
-                <img src="img/img3.jpg" alt="Image 3">
+                <img id = "img1" src="img/img1.jpg">
+                <img id = "img2" src="img/img2.jpg">
+                <img id = "img3" src="img/img3.jpg">
             </div>
         </section>
 
