--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
                 <li><a href="sites/contacts.html" id="site5"></a></li>
                 <li>
                     <select id="language-select">
-                        <option value="it"><img class = "language-select-img" src="img/ita.png"></option>
-                        <option value="de"><img class = "language-select-img" src="img/de.png"></option>
-                        <option value="en"><img class = "language-select-img" src="img/en.png"></option>
+                        <option value="it">Italiano</option>
+                        <option value="de">Deutsch</option>
+                        <option value="en">English</option>
                     </select>
                 </li>
             </ul>
