--- a/index.html
+++ b/index.html
@@ -51,6 +51,14 @@
         <section>
             <h2 id="title2" class="titlestyle"></h2>
             <p id="description2" class="textstyle"></p>
+            <div class="timeline">
+                <h2 class="left_container" id="timeline1"></h2>
+                <h2 class="right_container" id="timeline2"></h2>
+                <h2 class="left_container" id="timeline3"></h2>
+                <h2 class="right_container" id="timeline4"></h2>
+                <h2 class="left_container" id="timeline5"></h2>
+                <h2 class="right_container" id="timeline6"></h2>
+            </div>
         </section>
 
         <!-- RSVP Section -->
