--- a/index.html
+++ b/index.html
@@ -41,10 +41,15 @@
         <section>
             <h2 id="title1" class="titlestyle"></h2>
             <p id="description1" class="textstyle"></p>
-            <div class="section-images">
-                <img id = "img1" src="img/img1.jpg">
-                <img id = "img2" src="img/img2.jpg">
-                <img id = "img3" src="img/img3.jpg">
+            <div class="content-section">
+                <div id="sub1">
+                    <img id="img1" src="img/img1.jpg">
+                    <div id="sub2">
+                        <img id = "img2" src="img/img2.jpg">
+                        <img id = "img3" src="img/img3.jpg">
+                    </div>
+                </div>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3040.0246806864116!2d16.829905!3d40.3639771!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x13476a08ada653e1%3A0x1c17714f804a7207!2sNotedimare%20Ricevimenti!5e0!3m2!1sen!2sde!4v1734114842497!5m2!1sen!2sde" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
         </section>
 
