--- a/index.html
+++ b/index.html
@@ -57,35 +57,18 @@
             <h2 id="title2" class="titlestyle"></h2>
             <p id="description2" class="textstyle"></p>
             <div class="timeline">
-                <h2 class="left_container" id="timeline1"></h2>
-                <h2 class="right_container" id="timeline2"></h2>
-                <h2 class="left_container" id="timeline3"></h2>
-                <h2 class="right_container" id="timeline4"></h2>
-                <h2 class="left_container" id="timeline5"></h2>
-                <h2 class="right_container" id="timeline6"></h2>
+                <h2 class="left_container textstyle" id="timeline1"></h2>
+                <h2 class="right_container textstyle" id="timeline2" class="textstyle"></h2>
+                <h2 class="left_container textstyle" id="timeline3"></h2>
+                <h2 class="right_container textstyle" id="timeline4"></h2>
+                <h2 class="left_container textstyle" id="timeline5"></h2>
+                <h2 class="right_container textstyle" id="timeline6"></h2>
             </div>
         </section>
-
-        <!-- RSVP Section -->
-        <section id="rsvp">
-            <h2>RSVP</h2>
-            <form action="submit_rsvp.php" method="POST">
-                <label for="name">Name:</label>
-                <input type="text" id="name" name="name" required>
-                <label for="email">Email:</label>
-                <input type="email" id="email" name="email" required>
-                <label for="attendance">Will you attend?</label>
-                <select id="attendance" name="attendance">
-                    <option value="yes">Yes</option>
-                    <option value="no">No</option>
-                </select>
-                <button type="submit">Submit</button>
-            </form>
-        </section>
-
-        <section id="gallery">
-            <h2>Gallery</h2>
-            <p>Add photos or links to a gallery here.</p>
+        <section>
+            <h2 id="title3" class="titlestyle"></h2>
+            <h2 id="subtitle3" class="subtitlestyle"></h2>
+            <p id="description3" class="textstyle"></p>
         </section>
     </main>
 
