--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
             <div id="sub3">
                 <img id = "img4" src="img/img4.jpg">
                 <div id="sub4">
-                    <img id = "img5" src="img/img5.jpg">
-                    <img id = "img6" src="img/img6.jpg">
+                    <p id = "button1" class="textstyle" href="https://example.com" class="button" target="_blank"></p>
+                    <p id = "button2" class="textstyle" href="https://example.com" class="button" target="_blank"></p><
                 </div>
             </div>
         </section>
