--- a/index.html
+++ b/index.html
@@ -41,15 +41,15 @@
         <section>
             <h2 id="title1" class="titlestyle"></h2>
             <p id="description1" class="textstyle"></p>
-            <div class="content-section">
-                <div id="sub1">
+            <div id="sub1">
+                <div id="sub2">
                     <img id="img1" src="img/img1.jpg">
-                    <div id="sub2">
+                    <div id="sub3">
                         <img id = "img2" src="img/img2.jpg">
                         <img id = "img3" src="img/img3.jpg">
                     </div>
                 </div>
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3040.0246806864116!2d16.829905!3d40.3639771!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x13476a08ada653e1%3A0x1c17714f804a7207!2sNotedimare%20Ricevimenti!5e0!3m2!1sen!2sde!4v1734114842497!5m2!1sen!2sde" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe id="map1" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3040.0246806864116!2d16.829905!3d40.3639771!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x13476a08ada653e1%3A0x1c17714f804a7207!2sNotedimare%20Ricevimenti!5e0!3m2!1sen!2sde!4v1734114842497!5m2!1sen!2sde" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
         </section>
 
@@ -69,12 +69,9 @@
             <h2 id="title3" class="titlestyle"></h2>
             <h2 id="subtitle3" class="subtitlestyle"></h2>
             <p id="description3" class="textstyle"></p>
-            <div id="sub3">
+            <div id="sub4">
                 <img id = "img4" src="img/img4.jpg">
-                <div id="sub4">
-                    <p id = "button1" class="textstyle" href="https://example.com" class="button" target="_blank"></p>
-                    <p id = "button2" class="textstyle" href="https://example.com" class="button" target="_blank"></p><
-                </div>
+                <button id = "button1" onclick="window.open('https://argonautihotel.it/', '_blank');"><span>Argonavti<br>Resort</span></button>
             </div>
         </section>
     </main>
