--- a/index.html
+++ b/index.html
@@ -67,12 +67,14 @@
         </section>
         <section>
             <h2 id="title3" class="titlestyle"></h2>
-            <h2 id="subtitle3" class="subtitlestyle"></h2>
+            <h2 id="subtitle1" class="subtitlestyle"></h2>
             <p id="description3" class="textstyle"></p>
             <div id="sub4">
                 <img id = "img4" src="img/img4.jpg">
                 <button id = "button1" onclick="window.open('https://argonautihotel.it/', '_blank');"><span>Argonavti<br>Resort</span></button>
             </div>
+            <h2 id="subtitle2" class="subtitlestyle"></h2>
+            <p id="description4" class="textstyle"></p>
         </section>
     </main>
 
