--- a/index.html
+++ b/index.html
@@ -76,12 +76,27 @@
             <h2 id="subtitle2" class="subtitlestyle"></h2>
             <p id="description4" class="textstyle"></p>
         </section>
+        <section>
+            <h2 id="title5" class="titlestyle"></h2>
+            <p id="description5" class="textstyle"></p>
+        </section>
+        <section>
+            <h2 id="title6" class="titlestyle"></h2>
+            <p id="description6" class="textstyle"></p>
+        </section>
+        <section>
+            <h2 id="title7" class="titlestyle"></h2>
+            <p id="description7" class="textstyle"></p>
+            <button id="button7" onclick="window.open('https://docs.google.com/forms/d/e/1FAIpQLSeR_ZzqyjOSfH4aDd98d3WgrCfnu4a0AiNsXbqeHlG9YQDYJQ/viewform', '_blank');"></button>
+        </section>
+        <section>
+            <h2 id="title8" class="titlestyle"></h2>
+            <p class="textstyle">Silvia:<br>+49 15782215018</p>
+            <p class="textstyle">Joachim:<br>+49 17691385504</p>
+            <p class="textstyle" id="giusyphone">Giusy:<br>+49 175 2133702</p>
+        </section>
     </main>
 
-    <footer>
-        <p>&copy; 2024 Your Names. All Rights Reserved.</p>
-        <p><a href="#top">Back to Top</a></p>
-    </footer>
     <script src="script.js"></script>
 </body>
 </html>
