--- a/index.html
+++ b/index.html
@@ -91,9 +91,15 @@
         </section>
         <section id="section8">
             <h2 id="title8" class="titlestyle"></h2>
-            <p class="textstyle">Silvia:<br>+49 15782215018</p>
-            <p class="textstyle">Joachim:<br>+49 17691385504</p>
-            <p class="textstyle" id="giusyphone">Giusy:<br>+49 175 2133702</p>
+            <div id="sub8n1"> 
+                <div id="sub8n2">
+                    <p class="textstyle">Silvia:<br>+49 15782215018</p>
+                    <p class="textstyle">Joachim:<br>+49 17691385504</p>
+                    <p class="textstyle" id="giusyphone">Giusy:<br>+49 175 2133702</p>
+                </div>
+                <img id="img8" src="img/couple.jpeg">
+            </div>
+            
         </section>
     </main>
 
