--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
         <section id="section1">
             <h2 id="title1" class="titlestyle"></h2>
             <p id="description1" class="textstyle"></p>
-            <div id="sub1">
-                <div id="sub2">
+            <div id="sub1n1">
+                <div id="sub1n2">
                     <img id="img1" src="img/img1.jpg">
-                    <div id="sub3">
+                    <div id="sub1n3">
                         <img id = "img2" src="img/img2.jpg">
                         <img id = "img3" src="img/img3.jpg">
                     </div>
@@ -93,9 +93,11 @@
             <h2 id="title8" class="titlestyle"></h2>
             <div id="sub8n1"> 
                 <div id="sub8n2">
-                    <p class="textstyle">Silvia:<br>+49 15782215018</p>
-                    <p class="textstyle">Joachim:<br>+49 17691385504</p>
-                    <p class="textstyle" id="giusyphone">Giusy:<br>+49 175 2133702</p>
+                    <p>Silvia:<br>+49 15782215018</p>
+                    <br>
+                    <p>Joachim:<br>+49 17691385504</p>
+                    <br>
+                    <p id="giusyphone">Giusy:<br>+49 175 2133702</p>
                 </div>
                 <img id="img8" src="img/couple.jpeg">
             </div>
