--- a/index.html
+++ b/index.html
@@ -38,13 +38,16 @@
         </div>
         <section id="section1">
             <h2 id="title1" class="titlestyle"></h2>
-            <p id="description1" class="textstyle"></p>
+            <p class="textstyle">
+                <a id="description1"></a>
+                <a id="link1" href="https://www.notedimarericevimenti.com/" target="_blank">Notedimare</a>
+            </p>
             <div id="sub1n1">
                 <div id="sub1n2">
-                    <img id="img1" src="img/img1.jpg">
+                    <img id="img1n1" src="img/img1.jpg">
                     <div id="sub1n3">
-                        <img id = "img2" src="img/img2.jpg">
-                        <img id = "img3" src="img/img3.jpg">
+                        <img id = "img1n2" src="img/img2.jpg">
+                        <img id = "img1n3" src="img/img3.jpg">
                     </div>
                 </div>
                 <iframe id="map1" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3040.0246806864116!2d16.829905!3d40.3639771!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x13476a08ada653e1%3A0x1c17714f804a7207!2sNotedimare%20Ricevimenti!5e0!3m2!1sen!2sde!4v1734114842497!5m2!1sen!2sde" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
@@ -53,7 +56,7 @@
         <section id="section2">
             <h2 id="title2" class="titlestyle"></h2>
             <p id="description2" class="textstyle"></p>
-            <div class="timeline">
+            <div class="timeline2">
                 <h2 class="left_container textstyle" id="timeline2n1"></h2>
                 <h2 class="right_container textstyle" id="timeline2n2" class="textstyle"></h2>
                 <h2 class="left_container textstyle" id="timeline2n3"></h2>
@@ -66,8 +69,8 @@
             <h2 id="title3" class="titlestyle"></h2>
             <h2 id="subtitle3n1" class="subtitlestyle"></h2>
             <p id="description3n1" class="textstyle"></p>
-            <div id="sub4">
-                <img id = "img4" src="img/img4.jpg">
+            <div id="sub3">
+                <img id = "img3" src="img/img4.jpg">
                 <button id = "button1" onclick="window.open('https://argonautihotel.it/', '_blank');"><span>Argonavti<br>Resort</span></button>
             </div>
             <h2 id="subtitle3n2" class="subtitlestyle"></h2>
