--- a/index.html
+++ b/index.html
@@ -90,6 +90,10 @@
         <section id="section7">
             <h2 id="title7" class="titlestyle"></h2>
             <p id="description7" class="textstyle"></p>
+            <div id = "sub7">
+                <img id = "img7n1" src="img/food1.jpg">
+                <img id = "img7n2" src="img/food2.jpg">
+            </div>
             <button id="button7" onclick="window.open('https://docs.google.com/forms/d/e/1FAIpQLSeR_ZzqyjOSfH4aDd98d3WgrCfnu4a0AiNsXbqeHlG9YQDYJQ/viewform', '_blank');"></button>
         </section>
         <section id="section8">
