--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <h2 id="subtitle3n1" class="subtitlestyle"></h2>
             <p id="description3n1" class="textstyle"></p>
             <div id="sub3">
-                <img id = "img3" src="img/img4.jpg">
+                <img id = "img3" src="img/argonauti.jpeg">
                 <button id = "button1" onclick="window.open('https://argonautihotel.it/', '_blank');"><span>Argonavti<br>Resort</span></button>
             </div>
             <h2 id="subtitle3n2" class="subtitlestyle"></h2>
@@ -78,6 +78,17 @@
         </section>
         <section id="section4">
             <h2 id="title4" class="titlestyle"></h2>
+            <p id="subtitle4n1" class="subtitlestyle"></p>
+            <div id="sub4n1">
+                <img id = "img4n1" src="img/metaponto.jpeg">
+                <img id = "img4n2" src="img/matera.jpeg">
+            </div>
+            <p id="subtitle4n2" class="subtitlestyle"></p>
+            <div id="sub4n1">
+                <img id = "img4n3" src="img/taranto.jpeg">
+                <img id = "img4n4" src="img/polignanoamare.jpeg">
+                <img id = "img4n5" src="img/alberobello.jpeg">
+            </div>
         </section>
         <section id="section5">
             <h2 id="title5" class="titlestyle"></h2>
