--- a/index.html
+++ b/index.html
@@ -68,13 +68,17 @@
         <section id="section3">
             <h2 id="title3" class="titlestyle"></h2>
             <h2 id="subtitle3n1" class="subtitlestyle"></h2>
-            <p id="description3n1" class="textstyle"></p>
+            <p class="textstyle">
+                <a id="description3n1"></a>
+                <a id="link1" href="https://argonautihotel.it/" target="_blank">Porto Degli Argonauti</a>
+                <a id="description3n2"></a>
+            </p>
             <div id="sub3">
-                <img id = "img3" src="img/argonauti.jpeg">
-                <button id = "button1" onclick="window.open('https://argonautihotel.it/', '_blank');"><span>Argonavti<br>Resort</span></button>
+                <img id="img3" src="img/argonauti.jpeg">
+                <iframe id="map3" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6082.494214548361!2d16.798790395259843!3d40.336864016973685!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1347439c8776fd75%3A0xbd12173ee9448c8f!2sPort%20Of%20Argonauts!5e0!3m2!1sen!2sde!4v1734291191420!5m2!1sen!2sde" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
             <h2 id="subtitle3n2" class="subtitlestyle"></h2>
-            <p id="description3n2" class="textstyle"></p>
+            <p id="description3n3" class="textstyle"></p>
         </section>
         <section id="section4">
             <h2 id="title4" class="titlestyle"></h2>
