--- a/index.html
+++ b/index.html
@@ -73,12 +73,26 @@
                 <a id="link1" href="https://argonautihotel.it/" target="_blank">Porto Degli Argonauti</a>
                 <a id="description3n2"></a>
             </p>
-            <div id="sub3">
-                <img id="img3" src="img/argonauti.jpeg">
+            <div id="sub3n1">
+                <img id="img3n1" src="img/argonauti.jpeg">
                 <iframe id="map3" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6082.494214548361!2d16.798790395259843!3d40.336864016973685!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1347439c8776fd75%3A0xbd12173ee9448c8f!2sPort%20Of%20Argonauts!5e0!3m2!1sen!2sde!4v1734291191420!5m2!1sen!2sde" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
             <h2 id="subtitle3n2" class="subtitlestyle"></h2>
             <p id="description3n3" class="textstyle"></p>
+            <div id="sub3n2">
+                <div id="sub3n3">
+                    <img id="img3n2" src="img/giardinidizeus.png">
+                    <p class="textstyle">
+                        <a id="link1" href="https://igiardinidizeus.it/" target="_blank">Giardini di Zeus</a>
+                        <br>
+                        <a id="description3n4"></a>
+                    </p>
+                </div>
+                <div id="sub3n4">
+                    <img id="img3n3" src="img/hotelturismo.png">
+                    <p class="textstyle"><a id="link1" href="https://hotelturismometaponto.com/" target="_blank">Hotel Turismo</a></p>
+                </div>
+            </div>
         </section>
         <section id="section4">
             <h2 id="title4" class="titlestyle"></h2>
