--- a/index.html
+++ b/index.html
@@ -14,23 +14,22 @@
 </head>
 
 <body>
-    <ul id="navbar">
-        <li><button id="nav1" onclick="navigateTo('section1')"></button></li>
-        <li><button id="nav2" onclick="navigateTo('section2')"></button></li>
-        <li><button id="nav3" onclick="navigateTo('section3')"></button></li>
-        <li><button id="nav4" onclick="navigateTo('section4')"></button></li>
-        <li><button id="nav5" onclick="navigateTo('section5')"></button></li>
-        <li><button id="nav6" onclick="navigateTo('section6')"></button></li>
-        <li><button id="nav7" onclick="navigateTo('section7')"></button></li>
-        <li><button id="nav8" onclick="navigateTo('section8')"></button></li>
-        <li>
-            <select id="language">
-                <option value="it">ITALIANO</option>
-                <option value="de">DEUTSCH</option>
-                <option value="en">ENGLISCH</option>
-            </select>
-        </li>
-    </ul>
+    <div id="navbar">
+        <button id="hamburger" onclick="toggleMenu()">☰</button>
+        <button id="nav1" onclick="navigateTo('section1')"></button>
+        <button id="nav2" onclick="navigateTo('section2')"></button>
+        <button id="nav3" onclick="navigateTo('section3')"></button>
+        <button id="nav4" onclick="navigateTo('section4')"></button>
+        <button id="nav5" onclick="navigateTo('section5')"></button>
+        <button id="nav6" onclick="navigateTo('section6')"></button>
+        <button id="nav7" onclick="navigateTo('section7')"></button>
+        <button id="nav8" onclick="navigateTo('section8')"></button>
+        <select id="language">
+            <option value="it">ITALIANO</option>
+            <option value="de">DEUTSCH</option>
+            <option value="en">ENGLISCH</option>
+        </select>
+    </div>
     <main>
         <div id="section0">
             <h1 id="title0" class="titlestyle"></h1>
@@ -41,6 +40,7 @@
             <p class="textstyle">
                 <a id="description1"></a>
                 <a id="link1" href="https://www.notedimarericevimenti.com/" target="_blank">Notedimare</a>
+                <a>.</a>
             </p>
             <div id="sub1n1">
                 <div id="sub1n2">
@@ -129,11 +129,11 @@
             <h2 id="title8" class="titlestyle"></h2>
             <div id="sub8n1"> 
                 <div id="sub8n2">
-                    <p>Silvia:<br>+49 15782215018</p>
+                    <p class="textstyle">Silvia:<br>+49 15782215018</p>
                     <br>
-                    <p>Joachim:<br>+49 17691385504</p>
+                    <p class="textstyle">Joachim:<br>+49 17691385504</p>
                     <br>
-                    <p id="giusyphone">Giusy:<br>+49 175 2133702</p>
+                    <p id="giusyphone" class="textstyle">Giusy:<br>+49 175 2133702</p>
                 </div>
                 <img id="img8" src="img/couple.jpeg">
             </div>
@@ -142,10 +142,5 @@
     </main>
 
     <script src="script.js"></script>
-    <script>
-        function navigateTo(sectionId) {
-            document.getElementById(sectionId).scrollIntoView({ behavior: 'smooth' });
-        }
-    </script>
 </body>
 </html>
