--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
         <button id="nav6" class="nav" onclick="navigateTo('section6')"></button>
         <button id="nav7" class="nav" onclick="navigateTo('section7')"></button>
         <button id="nav8" class="nav" onclick="navigateTo('section8')"></button>
-        <select id="language" class="nav">
+        <select id="language" class="nav" onchange="changeLanguage()">
             <option value="it">ITALIANO</option>
             <option value="de">DEUTSCH</option>
-            <option value="en">ENGLISCH</option>
+            <option value="en">ENGLISH</option>
         </select>
     </div>
     <main>
