--- a/index.html
+++ b/index.html
@@ -96,12 +96,12 @@
         </section>
         <section id="section4">
             <h2 id="title4" class="titlestyle"></h2>
-            <p id="subtitle4n1" class="subtitlestyle"></p>
+            <p class="subtitlestyle">Basilicata</p>
             <div id="sub4n1">
                 <button id = "img4n1" class="imgbutton" onclick="window.open('https://www.google.com/maps/place/75012+Metaponto+MT,+Italia/data=!4m2!3m1!1s0x134769fa1a717c67:0xf1542a2a0b886d5b?utm_source=mstt_1&entry=gps&coh=192189&g_ep=CAESCjExLjE1NS4xMDEYACDXggMqdSw5NDI0MjQ5Niw5NDIyMzI5OSw5NDIxNjQxMyw5NDIxMjQ5Niw5NDIwNzM5NCw5NDIwNzUwNiw5NDIwODUwNiw5NDIxNzUyMyw5NDIxODY1Myw5NDIyOTgzOSw0NzA4NzExOCw0NzA4NDM5Myw5NDIxMzIwMEICREU%3D', '_blank');">METAPONTO</button>
                 <button id = "img4n2" class="imgbutton" onclick="window.open('https://www.google.com/maps/place/75100+Matera+MT,+Italia/data=!4m2!3m1!1s0x13477ee2482b152b:0x8f6a4ae10da9360?utm_source=mstt_1&entry=gps&coh=192189&g_ep=CAESCjExLjE1NS4xMDEYACDXggMqdSw5NDI0MjQ5Niw5NDIyMzI5OSw5NDIxNjQxMyw5NDIxMjQ5Niw5NDIwNzM5NCw5NDIwNzUwNiw5NDIwODUwNiw5NDIxNzUyMyw5NDIxODY1Myw5NDIyOTgzOSw0NzA4NzExOCw0NzA4NDM5Myw5NDIxMzIwMEICREU%3D', '_blank');">MATERA</button>
             </div>
-            <p id="subtitle4n2" class="subtitlestyle"></p>
+            <p class="subtitlestyle">Puglia</p>
             <div id="sub4n1">
                 <button id = "img4n3" class="imgbutton" onclick="window.open('https://www.google.com/maps/place/Taranto+TA,+Italia/data=!4m2!3m1!1s0x13471d1819a77b13:0x64f8f9a58d57dfcf?utm_source=mstt_1&entry=gps&coh=192189&g_ep=CAESCjExLjE1NS4xMDEYACDXggMqdSw5NDI0MjQ5Niw5NDIyMzI5OSw5NDIxNjQxMyw5NDIxMjQ5Niw5NDIwNzM5NCw5NDIwNzUwNiw5NDIwODUwNiw5NDIxNzUyMyw5NDIxODY1Myw5NDIyOTgzOSw0NzA4NzExOCw0NzA4NDM5Myw5NDIxMzIwMEICREU%3D', '_blank');">TARANTO</button>
                 <button id = "img4n4" class="imgbutton" onclick="window.open('https://www.google.com/maps/place/70044+Polignano+a+Mare+BA/data=!4m2!3m1!1s0x1347cbeb9e80f67b:0x9bbe6b6e25a97601?utm_source=mstt_1&entry=gps&coh=192189&g_ep=CAESCjExLjE1Mi4xMDAYACDXggMqdSw5NDI0MjQ5Niw5NDIyMzI5OSw5NDIxNjQxMyw5NDIxMjQ5Niw5NDIwNzM5NCw5NDIwNzUwNiw5NDIwODUwNiw5NDIxNzUyMyw5NDIxODY1Myw5NDIyOTgzOSw0NzA4NzExOCw0NzA4NDM5Myw5NDIxMzIwMEICSVQ%3D', '_blank');">POLIGNANO A MARE</button>
