--- a/index.html
+++ b/index.html
@@ -139,6 +139,9 @@
             </div>
             
         </section>
+        <footer>
+            <p>©Alessandro lo Muzio</p>
+        </footer>
     </main>
 
     <script src="script.js"></script>
