--- a/index.html
+++ b/index.html
@@ -57,12 +57,12 @@
             <h2 id="title2" class="titlestyle"></h2>
             <p id="description2" class="textstyle"></p>
             <div class="timeline2">
-                <a class="left_container textstyle" id="timeline2n1"></a>
-                <a class="right_container textstyle" id="timeline2n2" class="textstyle"></a>
-                <a class="left_container textstyle" id="timeline2n3"></a>
-                <a class="right_container textstyle" id="timeline2n4"></a>
-                <a class="left_container textstyle" id="timeline2n5"></a>
-                <a class="right_container textstyle" id="timeline2n6"></a>
+                <p><a class="left_container textstyle" id="timeline2n1"></a></p>
+                <p><a class="right_container textstyle" id="timeline2n2" class="textstyle"></a></p>
+                <p><a class="left_container textstyle" id="timeline2n3"></a></p>
+                <p><a class="right_container textstyle" id="timeline2n4"></a></p>
+                <p><a class="left_container textstyle" id="timeline2n5"></a></p>
+                <p><a class="right_container textstyle" id="timeline2n6"></a></p>
             </div>
         </section>
         <section id="section3">
