--- a/index.html
+++ b/index.html
@@ -65,6 +65,14 @@
                 <p><a class="right_container textstyle" id="timeline2n6"></a></p>
             </div>
         </section>
+        <section id="section9">
+            <h2 id="title9" class="titlestyle"></h2>
+            <p id="description9" class="textstyle"></p>
+            <div id="sub9">
+                <img id="img9n1" src="img/img9n1.png">
+                <img id="img9n2" src="img/img9n2.png">
+            </div>
+        </section>
         <section id="section3">
             <h2 id="title3" class="titlestyle"></h2>
             <h2 id="subtitle3n1" class="subtitlestyle"></h2>
