--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Joachim + Silvia</title>
     <link rel="icon" href="img/icon.webp">
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="stylesmobile.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Corinthia:wght@400;700&family=Ephesis&display=swap" rel="stylesheet">
@@ -33,6 +34,9 @@
     <main>
         <div id="section0">
             <h1 id="title0" class="titlestyle"></h1>
+            <p class="titlestyle">
+                <a id="title0"></a>
+            <p>
             <h1 class="textstyle">15.09.2025</h1>
         </div>
         <section id="section1">
@@ -67,10 +71,12 @@
         </section>
         <section id="section9">
             <h2 id="title9" class="titlestyle"></h2>
-            <p id="description9" class="textstyle"></p>
+            <p id="description9n1" class="textstyle"></p>
+            <p id="description9n2" class="textstyle"></p>
+            <p id="description9n3" class="textstyle"></p>
             <div id="sub9">
-                <img id="img9n1" src="img/img9n1.png">
-                <img id="img9n2" src="img/img9n2.png">
+                <img id="img9n1" src="img/img9n1.jpeg">
+                <img id="img9n2" src="img/img9n2.jpeg">
             </div>
         </section>
         <section id="section3">
@@ -145,7 +151,6 @@
                 </div>
                 <img id="img8" src="img/couple.jpeg">
             </div>
-            
         </section>
         <footer>
             <p>©Alessandro lo Muzio</p>
