--- a/index.html
+++ b/index.html
@@ -153,7 +153,10 @@
         </section>
         <section id="section6">
             <h2 id="title6" class="titlestyle"></h2>
-            <p id="description6" class="textstyle"></p>
+            <p id="description6n1" class="textstyle"></p>
+            <p id="description6n2" class="textstyle"></p>
+            <p id="description6n3" class="textstyle"></p>
+            <button id="button6" onclick="window.open('https://docs.google.com/spreadsheets/d/1-YE0Swj6ge3SqlC9Mq3mPlOTRVpFL4XvMTEJafrJdjQ/edit?usp=drivesdk', '_blank');"></button>
         </section>
         <section id="section7">
             <h2 id="title7" class="titlestyle"></h2>
